--- a/trunk/CardAcountBook/AndroidManifest.xml
+++ b/trunk/CardAcountBook/AndroidManifest.xml
@@ -9,13 +9,37 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+
+        <!-- Main Activity -->
         <activity
-            android:name=".CardAcountBookActivity"
+            android:name=".CardAccountBookActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- My Card Activity -->
+        <activity
+            android:name=".MyCardActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MY_CARD" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <!-- Detail View Activity -->
+        <activity
+            android:name=".DetailViewActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.DETAIL_VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
