--- a/trunk/CardAcountBook/.classpath
+++ b/trunk/CardAcountBook/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/GraphView-2.0.jar"/>
+	<classpathentry kind="lib" path="achartengine-0.7.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
