--- a/trunk/CardAcountBook/AndroidManifest.xml
+++ b/trunk/CardAcountBook/AndroidManifest.xml
@@ -42,6 +42,23 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <!-- Graph View Activity -->
+        <activity android:name=".GraphViewActivity" 
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.GRAPH_VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".MonthlyGraphActivity" 
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MONTHLY_GRAPH_VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
