--- a/CardAcountBook/AndroidManifest.xml
+++ b/CardAcountBook/AndroidManifest.xml
@@ -42,6 +42,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
+        <!-- SMS BroadcastReceiver -->
+        <receiver android:name=".SMSReceiver" >
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
+        
         <!-- Graph View Activity -->
         <activity android:name=".GraphViewActivity" 
             android:label="@string/app_name">
@@ -51,6 +59,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
         <activity android:name=".MonthlyGraphActivity" 
             android:label="@string/app_name">
             <intent-filter>
@@ -60,5 +69,8 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS"/>
 
 </manifest>
