5. 3. 나의카드목록 동적으로 작동

--- a/CardAcountBook/AndroidManifest.xml
+++ b/CardAcountBook/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <!-- My Card Activity -->
         <activity
             android:name=".MyCardActivity"
-            android:label="@string/app_name" >
+            android:label="@string/my_card" >
             <intent-filter>
                 <action android:name="android.intent.action.MY_CARD" />
 
@@ -35,7 +35,7 @@
         <!-- Detail View Activity -->
         <activity
             android:name=".DetailViewActivity"
-            android:label="@string/app_name" >
+            android:label="@string/detail_view" >
             <intent-filter>
                 <action android:name="android.intent.action.DETAIL_VIEW" />
 
