--- a/CardAcountBook/.classpath
+++ b/CardAcountBook/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="achartengine-0.7.0.jar"/>
-	<classpathentry kind="lib" path="GraphView-2.0.jar"/>
+	<classpathentry kind="lib" path="opencsv-1.7.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
