--- a/CardAcountBook/AndroidManifest.xml
+++ b/CardAcountBook/AndroidManifest.xml
@@ -68,9 +68,22 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
+        <!-- Option View Activity -->
+        <activity android:name=".OptionViewActivity"
+            android:label="@string/app_name">
+            <intent-filter >
+                <action android:name="android.intent.action.OPTION_VIEW"/>
+                
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+        
     </application>
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="kr.ac.hansung.WRITE_DATA"/>
+    <uses-permission android:name="kr.ac.hansung.READ_DATA"/>
 
 </manifest>
