--- a/CardAcountBook/AndroidManifest.xml
+++ b/CardAcountBook/AndroidManifest.xml
@@ -69,6 +69,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CategoryGraphActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.CATEGORY_GRAPH_VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
         <!-- Option View Activity -->
         <activity
