--- a/trunk/CardAcountBook/AndroidManifest.xml
+++ b/trunk/CardAcountBook/AndroidManifest.xml
@@ -6,14 +6,12 @@
 
     <uses-sdk android:minSdkVersion="10" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+    <application android:icon="@drawable/ic_launcher" 
+        android:label="@string/app_name">
 
         <!-- Main Activity -->
-        <activity
-            android:name=".CardAccountBookActivity"
-            android:label="@string/app_name" >
+        <activity android:name=".CardAccountBookActivity" 
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -109,7 +107,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.ACCOUNT_MANAGER" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
-    <uses-permission android:name="android.permission.READ_OWNER_DATA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_OWNER_DATA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
