--- a/trunk/CardAcountBook/AndroidManifest.xml
+++ b/trunk/CardAcountBook/AndroidManifest.xml
@@ -6,12 +6,14 @@
 
     <uses-sdk android:minSdkVersion="10" />
 
-    <application android:icon="@drawable/ic_launcher" 
-        android:label="@string/app_name">
+    <application
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" >
 
         <!-- Main Activity -->
-        <activity android:name=".CardAccountBookActivity" 
-            android:theme="@android:style/Theme.Black.NoTitleBar">
+        <activity
+            android:name=".CardAccountBookActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -94,6 +96,13 @@
             android:label="@string/edit_my_card" >
             <intent-filter>
                 <action android:name="android.intent.action.CARD_INFO_EDIT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".CardListActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.CARD_LIST" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
