--- a/trunk/CardAcountBook/AndroidManifest.xml
+++ b/trunk/CardAcountBook/AndroidManifest.xml
@@ -62,7 +62,7 @@
         </activity>
         <activity
             android:name=".MonthlyGraphActivity"
-            android:label="@string/app_name" >
+            android:label="@string/monthly_show_text" >
             <intent-filter>
                 <action android:name="android.intent.action.MONTHLY_GRAPH_VIEW" />
 
@@ -71,7 +71,7 @@
         </activity>
         <activity
             android:name=".CategoryGraphActivity"
-            android:label="@string/app_name" >
+            android:label="@string/category_show_text" >
             <intent-filter>
                 <action android:name="android.intent.action.CATEGORY_GRAPH_VIEW" />
 
@@ -100,6 +100,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+      
         <activity android:name=".CardListActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.CARD_LIST" />
@@ -107,8 +108,17 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-    </application>
+        
+        <!-- Expandable Card List Activity -->
+        <activity android:name="CardExpandableListActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.EXPANDABLE_CARD_LIST" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+    </application>
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="kr.ac.hansung.WRITE_DATA" />
