--- a/trunk/CardAcountBook/AndroidManifest.xml
+++ b/trunk/CardAcountBook/AndroidManifest.xml
@@ -9,15 +9,26 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
-
+          
+		<!-- PassWord Activity -->
+		<!--
+	 	<activity 
+		    android:name=".PasswordActivity"
+		    android:theme="@android:style/Theme.Black.NoTitleBar" >
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+		-->
+		
         <!-- Main Activity -->
         <activity
             android:name=".CardAccountBookActivity"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
@@ -27,7 +38,6 @@
             android:label="@string/my_card" >
             <intent-filter>
                 <action android:name="android.intent.action.MY_CARD" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -53,7 +63,7 @@
         <!-- Graph View Activity -->
         <activity
             android:name=".GraphViewActivity"
-            android:label="@string/app_name" >
+            android:label="@string/breakdown_stats" >
             <intent-filter>
                 <action android:name="android.intent.action.GRAPH_VIEW" />
 
